--- a/.github/workflows/style_and_tests.yml
+++ b/.github/workflows/style_and_tests.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   check_style_consistency:
     name: Check style consistency
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository code
         uses: actions/checkout@ver3
@@ -14,3 +14,14 @@ jobs:
         run: pip install flake8 django
       - name: Execute flake8 linter
         run: flake8 monopoly/.flake8
+
+  run_code_tests:
+    name: Run tests for code
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository code
+        uses: actions/checkout@ver3
+      - name: Install requierments
+        run: pip install pytest pytest-django django
+      - name: Run the tests
+        run: pytest 
