Fixed previous bugs

--- a/.github/workflows/style_and_tests.yml
+++ b/.github/workflows/style_and_tests.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Install requierments
         run: pip install pytest pytest-django django
       - name: Run the tests
-        run: pytest 
+        run: pytest monopoly
